--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.2.2",
+    "aws-amplify-react": "^2.5.2",
+    "faker": "^4.1.0",
+    "interactjs": "^1.6.2",
+    "moment": "^2.24.0",
+    "randomcolor": "^0.5.4",
     "react": "^16.11.0",
+    "react-calendar-timeline": "^0.26.5",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.11.0",
+    "react-form": "^4.0.0-alpha.14",
     "react-scripts": "3.2.0"
   },
   "scripts": {
